[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "utils" }
day17 = { path = "day17" }
day18 = { path = "day18" }
day19 = { path = "day19" }
day20 = { path = "day20" }
day21 = { path = "day21" }
day22 = { path = "day22" }
day23 = { path = "day23" }
day24 = { path = "day24" }
day25 = { path = "day25" }

[workspace]
members = [
    "utils",
    "day17",
    "day18",
    "day19",
    "day20",
    "day21",
    "day22",
    "day23",
    "day24",
    "day25",
]